<resources>
    <string name="app_name">GisassBrowser</string>
    <string name="activity_settings">Settings</string>
    <string name="toggle_tab_switcher_menu_item">Toggle switcher</string>
    <string name="remove_tab_menu_item">Remove tab</string>
    <string name="add_tab_menu_item">New Window</string>
    <string name="add_incognito_tab_menu_item">New Incognito Window</string>
    <string name="clear_tabs_menu_item">Clear all tabs</string>
    <string name="settings_menu_item">Settings</string>
    <string name="tab_title">Tab %1$d</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</string>
    <string name="removed_tab_snackbar">Removed %1$s</string>
    <string name="cleared_tabs_snackbar">Removed all tabs</string>
    <string name="undo">Undo</string>
    <string name="edit_text_hint">Text</string>
    <string name="empty_view_text">No tabs available</string>
    <string name="theme_preference_category_title">Theme</string>
    <string name="theme_preference_key">theme_preference_key</string>
    <string name="theme_preference_title">Theme</string>
    <string name="theme_preference_summary">Allows to choose the theme, which should be used by the example app</string>
    <string name="theme_preference_default_value">0</string>
    <string name="search">Search</string>
    <string name="enter_url_here">Enter Url Here</string>
    <string name="buzzmate_ads">Buzzmate ads</string>
    <string name="browser_ads">Browser Ads</string>
    <string name="gisass_advertisement">GISASS Advertisement</string>
    <string name="title_activity_sliding_drawer">SlidingDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="buzzmate">Buzzmate</string>
    <string name="paymate">Paymate</string>
    <string name="advertisements">Advertisements</string>
    <string name="gic_mail">GIC Mail</string>
    <string name="e_profile">E Profile</string>
    <string name="emblem_makers">Emblem Makers</string>
    <string name="grow_with_us">Grow With Us</string>
    <string name="g_news">G News</string>
    <string name="weblog">Weblog</string>
    <string name="boxwis_forum">Boxwis Forum</string>
    <string name="pvt_jobs_gwirk">Pvt Jobs Gwirk</string>
    <string name="government_jobs">Government Jobs</string>
    <string name="gstore">Gstore</string>
    <string name="empower">Empower</string>
    <string name="social_media">Social Media</string>
    <string name="it_development_services">IT Development Services</string>
    <string name="add_business">Add Business</string>
    <string name="photos">Photos</string>
    <string name="my_business">My Business</string>
    <string name="login_signup">Login / Signup</string>
    <string name="http_login_gisass_com">http://login.gisass.com/</string>
    <string name="http_buzzmate_gisass_com">http://buzzmate.gisass.com/</string>
    <string name="http_paymate_gisass_com">http://paymate.gisass.com/</string>
    <string name="http_advertisement_gisass_com">http://advertisement.gisass.com/</string>
    <string name="http_gicmail_gisass_com">http://gicmail.gisass.com/</string>
    <string name="http_expodian_gisass_com">http://expodian.gisass.com/</string>
    <string name="http_emblem_maker_gisass_com">http://emblem-maker.gisass.com/</string>
    <string name="http_grow_with_us_gisass_com">http://grow-with-us.gisass.com/</string>
    <string name="http_pegon_news_gisass_com">http://pegon-news.gisass.com/</string>
    <string name="http_weblog_gisass_com">http://weblog.gisass.com/</string>
    <string name="http_boxwis_gisass_com">http://boxwis.gisass.com/</string>
    <string name="http_gwirk_gisass_com">http://gwirk.gisass.com/</string>
    <string name="http_government_job_gisass_com">http://government-job.gisass.com/</string>
    <string name="http_gstore_gisass_com">http://gstore.gisass.com/</string>
    <string name="http_empower_gisass_com">http://empower.gisass.com/</string>
    <string name="http_hiiwey_gisass_com">http://hiiwey.gisass.com/</string>
    <string name="http_gicsoftware_com">http://gicsoftware.com/</string>
    <string name="http_addweburl_gisass_com">http://addweburl.gisass.com/</string>
    <string name="http_cataphote_gisass_com">http://cataphote.gisass.com/</string>
    <string name="http_my_business_gisass_com">http://my-business.gisass.com/</string>
    <string name="gisass_home">http://gisass.com</string>
    <string name="loading">LOADING...</string>
    <string name="history">History</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_browser">Share Browser</string>
    <string name="add_bookmarks">Add Bookmarks</string>
    <string name="show_bookmarks">Show Bookmarks</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="clear_history">Clear History</string>
    <string name="choose_your_preferred">Choose Your Preferred</string>
    <string name="language">Language</string>
    <string name="change_language">Change Language</string>
    <string name="by_continuing_you_are_accept_the_user_agreement_and_policy">By Continuing you are accept the User Agreement And Policy</string>

</resources>
