<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="@dimen/twenty_dp"
    android:orientation="vertical">

    <com.gisass.browser.customFontViews.CustomTextviewRegular
        android:id="@+id/buzzmateTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/ten_dp"
        android:text="@string/buzzmate_ads"
        android:textColor="@android:color/black"
        android:textSize="@dimen/eighteen_sp" />

    <com.gisass.browser.customFontViews.CustomTextviewRegular
        android:id="@+id/gisassTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/ten_dp"
        android:text="@string/gisass_advertisement"
        android:textColor="@android:color/black"
        android:textSize="@dimen/eighteen_sp" />

    <com.gisass.browser.customFontViews.CustomTextviewRegular
        android:id="@+id/browserTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/ten_dp"
        android:text="@string/browser_ads"
        android:textColor="@android:color/black"
        android:textSize="@dimen/eighteen_sp" />

</LinearLayout>