<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="@dimen/five_dp"
    app:cardElevation="@dimen/five_dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/twenty_dp"
        android:orientation="vertical">

        <com.gisass.browser.customFontViews.CustomTextviewRegular
            android:id="@+id/chooseLngTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/ten_dp"
            android:text="@string/choose_your_preferred"
            android:textColor="@android:color/black"
            android:textSize="@dimen/eighteen_sp"
            app:layout_constraintBottom_toTopOf="@id/languageTV"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.gisass.browser.customFontViews.CustomTextviewBold
            android:id="@+id/languageTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/ten_dp"
            android:text="@string/language"
            android:textColor="@android:color/black"
            android:textSize="@dimen/twenty_four_sp"
            app:layout_constraintBottom_toTopOf="@id/alertLanguagesRV"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <View
            android:id="@+id/horizontalLine"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/shadow"
            app:layout_constraintTop_toBottomOf="@id/languageTV" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/alertLanguagesRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fifty_dp"
            android:paddingStart="@dimen/ten_dp"
            android:paddingEnd="@dimen/ten_dp"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/horizontalLine" />


        <View
            android:id="@+id/horizontalLineBelow"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/ten_dp"
            android:background="@drawable/shadow"
            app:layout_constraintTop_toBottomOf="@id/alertLanguagesRV"

            app:layout_constraintVertical_bias=".2" />


        <com.gisass.browser.customFontViews.CustomCheckboxRegular
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp"
            android:text="@string/by_continuing_you_are_accept_the_user_agreement_and_policy"
            android:textSize="@dimen/eighteen_sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/horizontalLineBelow" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>